<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="BluetoothPeripheral_privacy_mini">to pilot your minidrones and connect your controllers</string>
    <string name="BluetoothPeripheral_privacy_pro">to connect your Bluetooth controllers</string>
    <string name="CameraUsage_privacy_mini">to shoot your flying drone</string>
    <string name="CameraUsage_privacy_pro">to use the Parrot Cockpitglasses</string>
    <string name="Coordiante_last_drone_data">N/A</string>
    <string name="ME003004">Retrieving...</string>
    <string name="ME003005">Impossible to connect to the product</string>
    <string name="ME003006">Impossible to connect...</string>
    <string name="ME003010">Delete</string>
    <string name="ME003011">Do you want to delete this media ?</string>
    <string name="ME003012">Transfer</string>
    <string name="ME003013">Do you want to transfer this media ?</string>
    <string name="ME003014">Transferring...</string>
    <string name="ME003018">File</string>
    <string name="ME003020">Deleting...</string>
    <string name="ME004003">No Media</string>
    <string name="PI100003">User emergency alert</string>
    <string name="PI100004">Cut out alert</string>
    <string name="PI100005">Critical battery alert</string>
    <string name="PI100006">Low battery alert</string>
    <string name="PhotoLibrary_privacy_pro">to store photos and videos of your flights</string>
    <string name="Plan_cd_edit">Edit</string>
    <string name="Plan_cd_folder">Folder</string>
    <string name="Plan_cd_go_back">Go back</string>
    <string name="Plan_cd_invalidate">Invalidate</string>
    <string name="Plan_cd_location">Location</string>
    <string name="Plan_cd_play">Play</string>
    <string name="Plan_cd_speed">Speed</string>
    <string name="Plan_cd_stop">Stop</string>
    <string name="Plan_cd_switch_view_type">Switch view</string>
    <string name="Plan_cd_timeline">Timeline</string>
    <string name="Plan_cd_undo">Undo</string>
    <string name="Plan_cd_validate">Validate</string>
    <string name="a_axis">A axis</string>
    <string name="a_new_plan">a new plan?</string>
    <string name="abort">Cancel</string>
    <string name="about">About</string>
    <string name="about_enter_email">Enter your e-mail</string>
    <string name="about_enter_valid_email">Please enter a valid email address</string>
    <string name="about_information">About</string>
    <string name="about_legal_mentions">Legal mentions</string>
    <string name="about_legal_mentions_accept">Accept</string>
    <string name="about_legal_mentions_refuse">Refuse</string>
    <string name="about_share_data_title">I accept to provide my data</string>
    <string name="about_title">About</string>
    <string name="academy_error_already_registered">%s is already registered</string>
    <string name="academy_error_cannot_reset_password">The user account associated with this email address cannot reset the password.</string>
    <string name="academy_error_connection">"Internet connection
not available"</string>
    <string name="academy_error_email_not_associated">This email address isn’t associated with an user account.</string>
    <string name="academy_error_empty_fields">Login and password need to be filled</string>
    <string name="academy_error_generic">There is an error, please try again</string>
    <string name="academy_error_invalid">%s is invalid</string>
    <string name="academy_error_required">%s is required</string>
    <string name="academy_error_too_long">%s is too long</string>
    <string name="academy_login_connection">Connection</string>
    <string name="academy_login_description">Create an account to access advanced stats on your piloting, and share it with the community.</string>
    <string name="academy_login_error_auth">Error in Login or Password</string>
    <string name="academy_login_error_dialog_title">Login has failed</string>
    <string name="academy_login_forgotten_password">I think I forgot my password</string>
    <string name="academy_login_not_signed_up">Not Registered Yet ?</string>
    <string name="academy_login_password">Password</string>
    <string name="academy_login_remember_me">Stay connected</string>
    <string name="academy_login_sign_up">Sign up</string>
    <string name="academy_login_title">Login</string>
    <string name="academy_login_username">Username</string>
    <string name="academy_map">Parrot Cloud map</string>
    <string name="academy_profile_cd_adress">Address</string>
    <string name="academy_profile_cd_biography">Biography</string>
    <string name="academy_profile_cd_birthday">Birthday</string>
    <string name="academy_profile_cd_city">City</string>
    <string name="academy_profile_cd_country">Country</string>
    <string name="academy_profile_cd_crash">Crash</string>
    <string name="academy_profile_cd_drone">Drone</string>
    <string name="academy_profile_cd_email">Email</string>
    <string name="academy_profile_cd_facebook">Facebook</string>
    <string name="academy_profile_cd_firstname">First Name</string>
    <string name="academy_profile_cd_google_plus">Google +</string>
    <string name="academy_profile_cd_lastname">Last Name</string>
    <string name="academy_profile_cd_name">Name</string>
    <string name="academy_profile_cd_phone">Phone</string>
    <string name="academy_profile_cd_pilotings">Pilotings</string>
    <string name="academy_profile_cd_psn">PSN</string>
    <string name="academy_profile_cd_status">Status</string>
    <string name="academy_profile_cd_website">Website</string>
    <string name="drone_memory_select_all">Select All</string>
    <string name="media_drone_memory">Drone memory</string>
    <string name="profile_address">Address</string>
    <string name="profile_biography">Bio</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_city">City</string>
    <string name="profile_country">Country</string>
    <string name="profile_edit_connect_account">Connect Account</string>
    <string name="profile_email">Email</string>
    <string name="profile_facebook">Facebook</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_google_plus">Google +</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_postal_code">Postal Code</string>
    <string name="profile_status">Status</string>
    <string name="profile_website">Website</string>
    <string name="academy_profile_cd_address">Address</string>
    <string name="academy_profile_cd_google">Google +</string>
    <string name="academy_profile_cd_postal_code">Postal Code</string>
    <string name="media_cd_delete">Delete</string>
    <string name="media_cd_list">List</string>
    <string name="media_cd_media_action">Media action</string>
    <string name="media_cd_select_all">All</string>
    <string name="media_cd_transfer">Transfer</string>
</resources>