<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_width="fill_parent">
        <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_first_name" android:textAllCaps="true" />
        <EditText android:id="@id/edit_first_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="90" android:contentDescription="@string/academy_profile_cd_firstname" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
        <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_last_name" android:textAllCaps="true" />
        <EditText android:id="@id/edit_last_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="90" android:contentDescription="@string/academy_profile_cd_lastname" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
        <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_status" android:textAllCaps="true" />
        <EditText android:id="@id/edit_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="90" android:contentDescription="@string/academy_profile_cd_status" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
        <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_biography" android:textAllCaps="true" />
        <EditText android:id="@id/edit_biography" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="4" android:lines="2" android:inputType="textMultiLine" android:contentDescription="@string/academy_profile_cd_biography" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
    </TableRow>
</merge>