<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/profile_bloc_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow android:layout_width="fill_parent">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_email" android:textAllCaps="true" />
            <EditText android:textSize="@dimen/form_edit_text_size" android:id="@id/edit_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:contentDescription="@string/academy_profile_cd_email" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_birthday" android:textAllCaps="true" />
            <TextView android:textSize="@dimen/form_edit_text_size" android:id="@id/edit_birthday" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/academy_profile_cd_birthday" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_phone" android:textAllCaps="true" />
            <EditText android:textSize="@dimen/form_edit_text_size" android:id="@id/edit_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="40" android:inputType="phone" android:contentDescription="@string/academy_profile_cd_phone" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_website" android:textAllCaps="true" />
            <EditText android:textSize="@dimen/form_edit_text_size" android:id="@id/edit_website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="70" android:contentDescription="@string/academy_profile_cd_website" android:textCursorDrawable="@null" android:layout_marginStart="@dimen/form_field_label_spacing" style="@style/EditText.Transparent" />
        </TableRow>
    </TableLayout>
</ScrollView>