<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/profile_bloc_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="1">
        <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_facebook" android:textAllCaps="true" />
            <Button android:textSize="@dimen/form_edit_text_size" android:id="@id/button_facebook" android:background="@drawable/button_selector" android:layout_width="fill_parent" android:layout_height="@dimen/academy_profile_edit_checkbox_height" android:text="@string/profile_edit_connect_account" android:contentDescription="@string/academy_profile_cd_facebook" android:layout_marginStart="@dimen/form_field_label_spacing" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_marginTop="@dimen/profile_tablerow_margin_top">
            <TextView android:textSize="@dimen/form_label_text_size" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_google_plus" android:textAllCaps="true" />
            <Button android:textSize="@dimen/form_edit_text_size" android:id="@id/button_google" android:background="@drawable/button_selector" android:layout_width="fill_parent" android:layout_height="@dimen/academy_profile_edit_checkbox_height" android:text="@string/profile_edit_connect_account" android:contentDescription="@string/academy_profile_cd_google" android:layout_marginStart="@dimen/form_field_label_spacing" />
        </TableRow>
    </TableLayout>
</merge>