<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/base_layout" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/home_title_text_size" android:textColor="@color/white" android:id="@id/text_toolbar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_drone_memory" android:layout_centerInParent="true" />
            <Button android:textColor="@color/white" android:id="@id/select_all_button" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drone_memory_select_all" android:contentDescription="@string/media_cd_select_all" android:layout_alignParentEnd="true" style="@style/ToolbarButton" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout android:id="@id/layout_memory_info" android:background="@color/transparent_medium_grey" android:layout_width="fill_parent" android:layout_height="@dimen/drone_memory_info_height" android:layout_below="@id/toolbar">
        <TextView android:textSize="@dimen/list_row_text_size_primary" android:gravity="center" android:id="@id/text_media_count" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginStart="@dimen/list_row_main_icon_margin" />
        <com.parrot.freeflight.view.PieChart android:id="@id/pie_chart_memory_space" android:layout_width="@dimen/drone_memory_info_piechart_size" android:layout_height="@dimen/drone_memory_info_piechart_size" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/list_row_main_icon_margin" android:layout_toStartOf="@id/text_memory_space" />
        <TextView android:gravity="center" android:id="@id/text_memory_space" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginEnd="@dimen/drone_memory_marginEnd" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ListView android:id="@id/list" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@null" android:dividerHeight="0.0dip" android:layout_above="@id/bottom_bar" android:layout_below="@id/layout_memory_info" android:contentDescription="@string/media_cd_list" />
    <TextView android:textSize="@dimen/drone_memory_empty_text_size" android:id="@id/empty" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ME004003" android:layout_centerInParent="true" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/loading_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom_bar" android:layout_below="@id/toolbar">
        <ProgressBar android:id="@id/progress_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/drone_memory_progress_marginBottom" style="@style/Base.Widget.AppCompat.ProgressBar" />
        <TextView android:textSize="@dimen/drone_memory_retrieving_text_size" android:gravity="center" android:id="@id/retrieving_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ME003004" />
    </LinearLayout>
    <RelativeLayout android:id="@id/bottom_bar" android:background="@color/transparent_dark_grey" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" android:layout_alignParentEnd="true">
        <Button android:textColor="@color/drone_memory_bottom_bar_delete_text" android:id="@id/button_delete" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ME003010" android:contentDescription="@string/media_cd_delete" android:layout_alignParentStart="true" style="@style/ToolbarButton" />
        <TextView android:gravity="center" android:id="@id/media_action_center_label" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="@dimen/drone_memory_center_label_min_width" android:layout_centerInParent="true" android:contentDescription="@string/media_cd_media_action" style="@style/ToolbarLabel" />
        <Button android:textColor="@color/yellow" android:id="@id/transfer_button" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ME003012" android:contentDescription="@string/media_cd_transfer" android:layout_alignParentEnd="true" style="@style/ToolbarButton" />
    </RelativeLayout>
    <View android:background="@color/drone_memory_bottom_bar_shadow" android:layout_width="fill_parent" android:layout_height="@dimen/drone_memory_bottom_bar_shadow_height" android:layout_above="@id/bottom_bar" />
    <FrameLayout android:id="@id/operation_fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>